# jj

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  book.toml  dprint.json  file  mkdocs-offline.yml  mkdocs.yml  pyproject.toml  pyproject.toml.off  target  testfile  versions.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md
.github/scripts/: docs-build-deploy  docs-build-deploy-push-another-repo
.github/workflows/: build.yml  ci.yml  docs.yml  nix-linux.yml  release.yml  scorecards.yml
benches/: trie.rs
cli/: Cargo.toml  build.rs
cli/src/: cli_util.rs  command_error.rs  commit_templater.rs  complete.rs  config-schema.json  config.rs  description_util.rs  diff_util.rs  formatter.rs  operation_templater.rs  template_builder.rs  ui.rs
cli/testing/: fake-diff-editor.rs
cli/tests/: cli-reference@.md.snap  runner.rs  test_abandon_command.rs  test_alias.rs  test_annotate_command.rs  test_bookmark_command.rs  test_branch_command.rs  (+34 more)
demos/: aa  demo_juggle.cast  demo_juggle_conflicts.sh  demo_operation_log.sh  demo_resolve_conflicts.sh  demo_working_copy.sh  helpers.sh  test_config.sh
docs/: FAQ.md  SUMMARY.md  branches.md  cli-reference.md  code-of-conduct.md  conf.py  config.md  conflicts.md  contributing.md  git-comparison.md  git-compatibility.md  github.md  glossary.md  index.md  index.rst  index.rst.off  install-and-setup.md  operation-log.md  related-work.md  revsets.md  sapling-comparison.md  sphinx_build_command.sh  templates.md  tutorial.md  working-copy.md
lib/: Cargo.toml
src/: cli_util.rs  commands.rs  commit_templater.rs  config-schema.json  formatter.rs  merge_tools.rs  template_parser.rs  templater.rs  ui.rs
tests/: test_abandon_command.rs  test_branch_command.rs  test_checkout.rs  test_chmod_command.rs  test_commit_template.rs  test_describe_command.rs  test_diffedit_command.rs  test_duplicate_command.rs  test_edit_command.rs  test_git_clone.rs  test_git_colocated.rs  test_git_fetch.rs  test_git_import_export.rs  test_git_push.rs  test_global_opts.rs  test_init_command.rs  test_log_command.rs  test_move_command.rs  test_new_command.rs  test_obslog_command.rs  test_rebase_command.rs  test_resolve_command.rs  test_restore_command.rs  test_split_command.rs  test_squash_command.rs  test_status_command.rs  test_undo.rs  test_unsquash_command.rs  test_workspaces.rs
winfun/: nextest-config.toml  useful_commands.md
(+114 files in other folders)
