# Borrowed from https://www.jspsych.org/7.2/developers/documentation/
[tool.poetry]
name = "jj-docs"
version = "0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.3"
mike = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
