# The `dev-dependencies` section sets up tools for building `jj`
# documentation. `poetry` will install these in a virtual environment.
# The other sections are unused.
[tool.poetry]
name = "jj-docs"
version = "0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
# These can be updated with `poetry add`.
mkdocs = "^1.5.2"
mkdocs-material = "^9.4"
# (Py)Markdown extensions
mdx-truly-sane-lists = "^1.3"
mdx-breakless-lists = "^1.0.1"
# Allows setting up redirects when renaming docs files
mkdocs-redirects = "^1.2.1"
# Versioning of documentation
mike = "^2.0.0"


[tool.pdm]
[tool.pdm.dev-dependencies]
# TODO: Try "mkdocs ~=1.5.2", etc.
dev = [
    "mkdocs<2.0.0,>=1.5.2",
    "mkdocs-material<10.0,>=9.4",
    "mdx-truly-sane-lists<2.0,>=1.3",
    "mdx-breakless-lists<2.0.0,>=1.0.1",
    "mkdocs-redirects<2.0.0,>=1.2.1",
    "mike<3.0.0,>=2.0.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = []
requires-python = ">=3.8,<4.0"
dependencies = []
name = "jj-docs"
version = "0"
description = ""
