[project]
name = "jj-docs"
# version = "0.1.0"
# description = "Add your description here"
# authors = [
#     { name = "Ilya Grigoriev", email = "ilyagr@users.noreply.github.com" }
# ]
dependencies = []
requires-python = ">= 3.8"

[tool.rye]
managed = false
virtual = true
# This is somewhat new and experiemntal in rye,
# but doesn't seem to mess anything up for this
# project.
# https://rye.astral.sh/guide/pyproject/#toolryeuniversal
universal=true
generate-hashes=true
dev-dependencies = [
    "mkdocs>=1.6, <1.7",
    "mkdocs-material>=9.5.39, <9.6",
    # Versioning of documentation
    "mike>=2.1.2, <3",
    # (Py)Markdown extensions
    "mdx-truly-sane-lists >=1.3, <2",
    "mdx-breakless-lists >=1.0.1, <1.1",
    # Allows setting up redirects when renaming docs files
    "mkdocs-redirects >=1.2.1, <1.3",
    # Used for the CLI reference
    "mkdocs-include-markdown-plugin >=6.0.4, <6.1",
]
